<resources>
    <string name="app_name">My Application</string>
    <string name="Hand">This machine digs potato from the soil by separating soil from the roots. It functions on small scale but separates the soil quickly to reduce the problems in harvesting of potato.  Even though the picture depicts a small-scale machine, the same technology is used in tractor-towed rigs to harvest potatoes at an even greater scale.</string>
    <string name="SHOVEL">Weeding is an important practice in agriculture. Growth of weeds can interrupt the growth of crops which will eventually lead to the unavailability of nutrients. This machine quickly and effectively tears up weeds without worrying about hurting the original crops. Letting your fields get overgrown can allow weeds and invasive species to choke out your cash crop and leave the farmer with pennies. Pesticides and weedicides are common, but many take issue with the possibly harmful chemicals hidden within. </string>
    <string name="PICKAXE">This machine is no different from the potato harvester but provides an ease in harvesting carrot from the ground along with roots which are digged deep inside. The machine is a boon in harvesting as it can emulsify the rate at which harvesting of carrot can be done.</string>
    <string name="HOE">Cow in our Indian society is used for milk and many other products are made out of it. This way it is important but if there is an easy way out to milk cow through machine; it can enhance the productivity in agriculture ultimately by increasing the milk production of the country </string>
    <string name="sandy">Sandy soil contains more than 60% sand and clay. It contains very little clay and silt, so it is porous. The size of soil particles in sandy soil is from 0.2mm to 2.0mm. The water building capacity of a sandy soil is very poor. Hence, there is a lot of air present in this type of soil.</string>
<string name="sacr">\n•\tSuitable Crops: Sandy soil is not good for plants. However, melon and coconut grow in sandy soil. If water is available for irrigation then crops such as maize, millets, barley can be grown in desert soil. Cactus also grows in this soil.</string>
<string name="clay">The clayey soil consists of very fine particles of clay. Its water holding capacity is very high. Wet clay soil is very sticky. It contains very little air. The size of soil particles in clay size is less than 0.2mm. Clayey soil is rich in organic matter.</string>
<string name="clacr">\n•\tSuitable Crops: It is also not good for many plants. It is only good for crops like paddy, which require a lot of water. Clay is used for making toys, pots, and many other purposes</string>
<string name="loamy">The loamy soil consists of sand, clay,, and silt. It also contains enough hummus. It has a good water-holding capacity. It has sufficient aeration. It is well suited for cultivation. Roots of plants get enough water, air, and space to grow.</string>
<string name="loacrc">\n•\tSuitable Crops: Loamy soil is ideal for growing crops such as wheat, sugarcane, cotton, jute, pulses, and oilseeds. Vegetables also grow well in this soil.</string>
<string name="red">The red color of soil is due to the presence of iron oxide. It appears yellow when it contains less iron or more water. Red soil contains a mixture of clay and sand, antis not fertile. However, the soil can be fertile by adding manures and fertilizers.</string>
<string name="recrec">\n•\tSuitable Crops: It is suitable for growing groundnuts, pulses, millet, cotton and tobacco.</string>
<string name="black">Black soil is also known as black lava soil. This soil black in color. It is formed from lava rocks and is rich in clay.</string>
<string name="blcrc">\n•\tSuitable Crops: It is ideal for growing crops such as cotton, sugarcane, tobacco, wheat, millets, and oilseeds.</string>
    <string name="ro">HOOVER XL is a powerful machine to aspirate the residues of crop and leaves on the ground, designed for fourth range producers. With 4 steering wheels, the aspirator is fitted with a side shifting cutting bars thus reducing the problems in harvesting lettuce</string>
    <string name="crops">An assortment of food and non food crops are filled in various pieces of the nation relying on the varieties in soil, atmosphere and development rehearses. Significant harvests filled in India are rice, wheat, millets, pulses, tea, coffee, sugarcane, oil seeds, cotton and jute, and so forth.</string>
<string name="rice">It is the staple food yield of a greater part of the individuals in India. Our nation is the second biggest maker of rice on the planet after China. It is a kharif crop which requires high temperature, (above 25°C) and high dampness with yearly precipitation over 100 cm. In the territories of less precipitation, it develops with the assistance of water system. Rice is filled in the fields of north and north-eastern India, seaside zones and the deltaic districts. Advancement of thick organization of waterway water system and tubewells have made it conceivable to develop rice in zones of less precipitation, for example, Punjab, Haryana and western Uttar Pradesh and parts of Rajasthan.</string>
<string name="whe">This is the second most significant grain crop. It is the fundamental food crop, in north and north-western piece of the nation. This rabi crop requires a cool developing season and a splendid daylight at the hour of aging. It expects 50 to 75 cm of yearly precipitation equitably dispersed over the developing season. There are two significant wheat-developing zones in the nation – the Ganga-Satluj fields in the north-west and dark soil locale of the Deccan. The significant wheat-delivering states are Punjab, Haryana, Uttar Pradesh, Bihar, Rajasthan and parts of Madhya Pradesh.</string>
<string name="mill">Jowar, bajra and ragi are the significant millets filled in India. However, these are known as coarse grains, they have extremely high healthy benefit. For instance, ragi is wealthy in iron, calcium, other miniature supplements and roughage. Jowar is the third most significant food crop as for region and creation. It is a downpour taken care of harvest generally filled in the sodden regions which barely needs water system. Maharashtra is the biggest maker of jowar followed by Karnataka, Andhra Pradesh and Madhya Pradesh.</string>
<string name="baj">	Bajra develops well on sandy soils and shallow dark soil. Rajasthan is the biggest maker of bajra followed by Uttar Pradesh, Maharashtra, Gujarat and Haryana. Ragi is a yield of dryregions and develops well on red, dark, sandy, loamy and shallow dark soils. Karnataka is the biggest maker of ragi followed by Tamil Nadu. Aside from these states, Himachal Pradesh, Uttarakhand, Sikkim, Jharkhand and Arunachal Pradesh are likewise significant for the creation of ragi.</string>
<string name="mai">It is a harvest which is utilized both as food and feed. It is a kharif crop which requires temperature between 21°C to 27°C and fills well in old alluvial soil. In certain states like Bihar maize is filled in rabi season too. Utilization of present day data sources, for example, HYV seeds, manures and water system have added to the expanding creation of maize. Significant maize-creating states are Karnataka, Uttar Pradesh, Bihar, Andhra Pradesh and Madhya Pradesh</string>
<string name="pul">India is the biggest maker just as the customer of pulses on the planet. These are the significant wellspring of protein in a vegetarian diet. Significant pulses that are filled in India are tur (arhar), urad, moong, masur, peas and gram. Would you be able to recognize which of these pulses are filled in the kharif season and which are filled in the rabi season? Heartbeats need less dampness and endure even in dry conditions. Being leguminous harvests, every one of these yields aside from arhar help in reestablishing soil fruitfulness by fixing nitrogen from the air. In this way, these are generally developed in revolution with different harvests. Significant heartbeat creating states in India are Madhya Pradesh, Uttar Pradesh, Rajasthan, Maharashtra and Karnataka.
</string>
    <string name="sugar">It is a tropical just as a subtropical yield. It fills well in hot and damp atmosphere with a temperature of 21°C to 27°C and a yearly precipitation between 75cm. what is more, 100cm. Water system is needed in the areas of low precipitation. It tends to be developed on an assortment of soils and needs physical work from planting to collecting. India is the second biggest maker of sugarcane simply after Brazil. It is the mainsource of sugar, gur (jaggary), khandsari and molasses. The significant sugarcane-delivering states are Uttar Pradesh, Maharashtra, Karnataka, Tamil Nadu, Andhra Pradesh, Bihar, Punjab and Haryana.</string>
    <string name="oil">India is the biggest maker of oil-seeds on the planet. Diverse oil seeds are developed covering around 12 percent of the complete edited territory of the nation. Fundamental oil-seeds delivered in India are groundnut, mustard, coconut, sesamum (until), soyabean, castor seeds, cotton seeds, linseed and sunflower. A large portion of these are consumable and utilized as cooking mediums. Notwithstanding, a portion of these are likewise utilized as crude material in the creation of cleanser, beautifying agents and balms.</string>
<string name="ground">Groundnut is a kharif yield and records for about portion of the significant oilseeds delivered in the nation. Andhra Pradesh is the biggest maker of groundnut followed by Tamil Nadu, Karnataka, Gujarat and Maharashtra – linseed and mustard are rabi crops. Sesamum is a kharif crop in north and rabi crop in south India. Castor seed is become both as rabi and kharif crop.</string>
<string name="tea">Tea development is a case of ranch agribusiness. It is likewise a significant drink crop presented in India at first by the British. Today, a large portion of the tea estates are possessed by Indians. The tea plant fills well in tropical and sub-heat and humidities supplied with profound and fruitful all around depleted soil, wealthy in humus and natural issue. Tea hedges require warm and sodden ice free atmosphere all as the year progressed. Successive showers uniformly disseminated throughout the year guarantee nonstop development of delicate leaves. Tea is a work concentrated industry. It requires plentiful, modest and gifted work. Tea is prepared inside the tea nursery to reestablish its newness. Significant tea-delivering states are Assam, slopes of Darjeeling and Jalpaiguri areas, West Bengal, Tamil Nadu and Kerala. Aside from these, Himachal Pradesh, Uttarakhand, Meghalaya, Andhra Pradesh and Tripura are likewise tea-delivering states in the nation. India is the main maker just as exporter of tea on the planet.</string>
<string name="coff">India produces around four percent of the world\'s coffee creation. Indian coffee is known on the planet for its great quality. The Arabica assortment at first brought from Yemen is delivered in the nation. This assortment is in incredible interest everywhere on the world. Intially its development was presented on the Baba Budan Hills andeven today its development is kept to the Nilgiri in Karnataka, Kerala and Tamil Nadu.</string>
<string name="too">Current cultivating innovation is utilized to improve wide scope of creation rehearses utilized by our ranchers. It utilizes hybrid seeds of chose assortment of a single crop, mechanically progressed gear and heaps of energy endowments as irrigation water, composts and pesticides. The most common types of equipment and apparatus utilized on farms include farm haulers, balers, joins, furrows, cutters, grower and sprayers.</string>
</resources>