<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    tools:context=".soil">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Types of Soil"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\n1.Sandy soil\n"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sandy"
            android:textSize="20sp"
            android:textColor="@color/black"
            /> <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sacr"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\n2.Clayey Soil\n"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clay"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clacr"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="\n3.Loamy Soil\n"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loamy"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loacrc"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="\n4.Red Soil\n"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recrec"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="\n5.Black Soil\n"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/black"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blcrc"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>


</ScrollView>